--- a/assets/scss/frontend/_doclist.scss
+++ b/assets/scss/frontend/_doclist.scss
@@ -1294,6 +1294,16 @@ body {
 	}
 }
 
+//  TOC numbering
+@media (max-width: 591px) {
+	.doc_right_mobile_menu .doc_rightsidebar,
+	.left-column .doc_left_sidebarlist {		
+		&.sticky{
+			top: 40px;
+		}
+	}
+}
+
 .toc_auto_numbering {
 	ul {
 		counter-reset: item;
